Update demo wording

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<body>
 		<h1>Quicktap demo page</h1>
 
-		<p><a href="https://github.com/marcoms/quicktap">GitHub page</a></p>
+		<p><a href="https://github.com/marcoms/quicktap">GitHub project</a></p>
 
 		<h2>Quicktap enabled</h2>
 		<div class="demo qt">Please tap me</div>
