const -> let for demo to work on firefox for now

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			const $$ = document.querySelectorAll.bind(document);
 
 			const qtDemos = $$(".qt");
-			for (const qtDemo of qtDemos) {
+			for (let qtDemo of qtDemos) {
 				quicktap.apply(qtDemo);
 			}
 		</script>
