--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<p><strong>Material example</strong></p>
 		<div class="demo demo-material non-qt">Please tap me</div>
 
-		<script src="lib/quicktap.js"></script>
+		<script src="dist/index.js"></script>
 		<script>
 			"use strict";
 
