--- a/demo/index.html
+++ b/demo/index.html
@@ -77,19 +77,6 @@
 		<p><strong>Material example</strong></p>
 		<div class="demo demo-material non-qt">Please tap me</div>
 
-		<script src="dist/index.js"></script>
-		<script>
-			"use strict";
-
-			// cost/benefit??
-
-			const $ = document.querySelector.bind(document);
-			const $$ = document.querySelectorAll.bind(document);
-
-			const qtDemos = $$(".qt");
-			for (let qtDemo of qtDemos) {
-				quicktap.apply(qtDemo);
-			}
-		</script>
+		<script src="res/js/main.js"></script>
 	</body>
 </html>
