Use two-column layout on larger viewports

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,33 +13,39 @@
 
 		<p><a href="https://github.com/marcoms/quicktap">GitHub project</a></p>
 
-		<h2>Quicktap enabled</h2>
+		<div class="demo-sections">
+			<div class="qt-section">
+				<h2>Quicktap enabled</h2>
 
-		<h3>Regular example</h3>
+				<h3>Regular example</h3>
 
-		<div class="demo qt">Please tap me</div>
+				<div class="demo qt">Please tap me</div>
 
-		<h3>Animated example</h3>
+				<h3>Animated example</h3>
 
-		<div class="demo demo-animated qt">Please tap me</div>
+				<div class="demo demo-animated qt">Please tap me</div>
 
-		<h3>Material example</h3>
+				<h3>Material example</h3>
 
-		<div class="demo demo-material qt">Please tap me</div>
+				<div class="demo demo-material qt">Please tap me</div>
+			</div>
 
-		<h2>No quicktap</h2>
+			<div class="no-qt-section">
+				<h2>No quicktap</h2>
 
-		<h3>Regular example</h3>
+				<h3>Regular example</h3>
 
-		<div class="demo">Please tap me</div>
+				<div class="demo">Please tap me</div>
 
-		<h3>Animated example</h3>
+				<h3>Animated example</h3>
 
-		<div class="demo demo-animated">Please tap me</div>
+				<div class="demo demo-animated">Please tap me</div>
 
-		<h3>Material example</h3>
+				<h3>Material example</h3>
 
-		<div class="demo demo-material">Please tap me</div>
+				<div class="demo demo-material">Please tap me</div>
+			</div>
+		</div>
 
 		<script src="res/js/main.js"></script>
 	</body>
