--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>quicktap demo</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="/res/css/style.css">
+		<link rel="stylesheet" href="res/css/style.css">
 	</head>
 
 	<body>
