--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<h1>Quicktap demo page</h1>
 
-		<p><code>quickap</code> implements a class-based replacement for the <code>:active</code> pseudo-class that doesn't delay on mobile. By tapping on the demo buttons below using a mobile (or emulated) device, you should observe a noticeable difference in latency.</p>
+		<p><code>quickap</code> implements a class-based replacement for the <code>:active</code> pseudo-class that doesn't delay on mobile. By tapping on the demo buttons below using a mobile (or emulated) device, you should observe a noticeable difference in touch latency.</p>
 
 		<p><a href="https://github.com/marcoms/quicktap">GitHub project</a></p>
 
