Drop webpack, use rollup

--- a/demo/index.html
+++ b/demo/index.html
@@ -49,6 +49,11 @@
 			</div>
 		</div>
 
-		<script src="res/js/main.js"></script>
+		<script src="../dist/index.js"></script>
+		<script>
+			'use strict';
+
+			quicktap(`.qt`);
+		</script>
 	</body>
 </html>
